--- a/news/style.css
+++ b/news/style.css
@@ -157,7 +157,7 @@ header {
 }
 .side-container {
   background-color: hsl(240, 100%, 5%);
-  padding: 50px 20px;
+  padding: 50px 30px;
 }
 .side-title h1 {
   padding-bottom: 1rem;
@@ -352,6 +352,14 @@ footer .foot {
   }
   .sidebar {
     width: 70%;
+    z-index: 1000000;
+  }
+  .header {
+    position: relative;
+    transition: 0.6s ease;
+  }
+  .header.sticky {
+    background: transparent;
   }
 
   #main-nav {
@@ -364,6 +372,14 @@ footer .foot {
   #desktop-nav {
     display: none;
   }
+  .header {
+    position: relative;
+    transition: 0.6s ease;
+  }
+  .header.sticky {
+    background: transparent;
+  }
+
   .logo img {
     width: 50px;
   }
