--- a/news/style.css
+++ b/news/style.css
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+::selection {
+  background-color: hsl(5, 85%, 63%);
+}
 body,
 html {
   font-family: "Inter", sans-serif;
