--- a/news/style.css
+++ b/news/style.css
@@ -100,9 +100,7 @@ header {
   width: 100%;
   padding-top: 5.25rem;
 }
-.news {
-  padding: 3rem 0;
-}
+
 .hero-container {
   display: flex;
 }
@@ -122,9 +120,9 @@ header {
 }
 .hero-mess {
   display: flex;
-  /* justify-content: space-between; */
   flex-direction: column;
 }
+
 .hero-mess .btn {
   padding: 1rem;
   background-color: hsl(5, 85%, 63%);
@@ -142,16 +140,11 @@ header {
   background-color: black;
 }
 
-.hero-text {
-  margin-bottom: 1.5rem;
-}
 .hero-text p {
   line-height: 25px;
+  padding-bottom: 1rem;
 }
 
-.news {
-  padding-bottom: 2rem;
-}
 .side {
   width: 90%;
   height: 100%;
@@ -184,39 +177,20 @@ header {
 .side-content h1:hover {
   color: hsl(35, 77%, 62%);
 }
-.items {
-  display: flex;
-  padding-right: 3rem;
-  padding: 10px;
-  cursor: pointer;
-}
+
 .flex-wrapper {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .items .basic-img img {
   width: 100px;
   transition: all 0.4s ease;
   box-shadow: none;
 }
-.basic-img img:hover {
-  transform: scale(1.1);
-}
-.content-fanet {
-  padding-left: 1rem;
-}
 
-.content-fanet h1 {
-  color: gray;
-  transition: 0.4s ease;
-}
-.content-fanet h1:hover {
-  color: black;
-}
-
-.content-fanet h1,
-.content-fanet h2 {
-  padding-bottom: 10px;
-}
 .sidebar {
   position: fixed;
   top: 0;
@@ -271,6 +245,94 @@ header {
   padding: 1rem 1.5rem;
 }
 
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  display: none;
+  transition: all 0.2s ease;
+}
+.popup-container {
+  position: relative;
+  width: 700px;
+  height: 500px;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.popup .logo-wrapper {
+  position: relative;
+  padding: 10px;
+}
+.logo-wrapper::after {
+  content: "";
+  position: absolute;
+  top: -60px;
+  right: -20px;
+  border-right: 4px solid hsl(240, 100%, 5%);
+  height: 300px;
+}
+.popup .logo-wrapper img {
+  position: relative;
+  width: 200px;
+}
+
+.popup .popup-content {
+  position: relative;
+  text-transform: capitalize;
+  margin-left: 2.5rem;
+}
+.popup .popup-content h2 {
+  font-size: 1.5rem;
+}
+.popup .popup-content p {
+  font-size: 0.9rem;
+  padding: 10px 0;
+}
+.popup label {
+  display: flex;
+  flex-direction: column;
+}
+.popup .btn {
+  padding: 10px 2rem;
+  background-color: hsl(5, 85%, 63%);
+  border: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.popup .popup-content input {
+  padding: 10px 2rem;
+  text-transform: capitalize;
+  border: 1px solid hsl(5, 85%, 63%);
+  margin-bottom: 10px;
+}
+.popup .close {
+  position: absolute;
+  top: 0.6rem;
+  right: 1.5rem;
+  cursor: pointer;
+}
+.hidden {
+  display: none;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(3px);
+  transition: 0.15s ease;
+}
+
 footer {
   width: 100%;
 }
@@ -287,7 +349,8 @@ footer .foot {
 .logo-rant img {
   width: 70px;
 }
-@media only screen and (max-width: 768px) {
+
+@media screen and (max-width: 768px) {
   #desktop-nav {
     display: none;
   }
@@ -303,8 +366,14 @@ footer .foot {
   .hero-container {
     display: block;
   }
+  .popup-container {
+    width: 600px;
+    height: 400px;
+  }
+
   .side-container {
-    padding: 30px;
+    background-color: hsl(240, 100%, 5%);
+    padding: 50px 30px;
   }
   .hero-content {
     display: block;
@@ -371,7 +440,8 @@ footer .foot {
     align-items: center;
   }
 }
-@media only screen and (max-width: 375px) {
+
+@media only screen and (max-width: 456px) {
   #desktop-nav {
     display: none;
   }
@@ -390,11 +460,67 @@ footer .foot {
     width: 70%;
   }
   .wrapper {
-    max-width: 400px;
+    max-width: 500px;
     margin: auto;
+  }
+  .popup .wrapper {
+    z-index: -1;
   }
   .hero-container {
     display: block;
+  }
+  .popup-container {
+    width: 400px;
+    height: 200px;
+    margin: auto;
+  }
+  .logo-wrapper::after {
+    content: "";
+    position: absolute;
+    top: -60px;
+    right: -20px;
+    border-right: 4px solid hsl(240, 100%, 5%);
+    height: 200px;
+  }
+  .popup .logo-wrapper img {
+    position: relative;
+    width: 100px;
+  }
+  .popup .btn {
+    padding: 5px 0.5rem;
+    background-color: hsl(5, 85%, 63%);
+    border: none;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    cursor: pointer;
+  }
+  .popup .popup-content input {
+    padding: 5px 5px;
+    font-size: 15px;
+    text-transform: capitalize;
+    border: 1px solid hsl(5, 85%, 63%);
+    margin-bottom: 10px;
+  }
+  .popup .popup-content {
+    position: relative;
+    text-transform: capitalize;
+    margin-left: 2.5rem;
+  }
+  .popup .popup-content h2 {
+    font-size: 0.9rem;
+  }
+  .popup .popup-content p {
+    font-size: 0.7rem;
+    padding: 10px 0;
+  }
+  .popup .close {
+    position: absolute;
+    top: 0.3rem;
+    right: 1.1rem;
+    width: 20px;
+    cursor: pointer;
   }
   .side-container {
     padding: 30px;
@@ -433,16 +559,7 @@ footer .foot {
   .side-title h1 {
     font-size: 1.5rem;
   }
-  .content-fanet h1 {
-    font-size: 1.2rem;
-  }
-  .content-fanet p {
-    font-size: 0.7rem;
-    color: gray;
-  }
-  .content-fanet h2 {
-    font-size: 0.8rem;
-  }
+
   .hero-mess .btn {
     padding: 0.7rem 1.5rem;
     text-transform: uppercase;
@@ -453,4 +570,267 @@ footer .foot {
     justify-content: space-between;
     align-items: center;
   }
-} ;
+}
+@media only screen and (max-width: 600px) {
+  #desktop-nav {
+    display: none;
+  }
+  .header {
+    position: relative;
+    transition: 0.6s ease;
+  }
+  .header.sticky {
+    background: transparent;
+  }
+
+  .logo img {
+    width: 50px;
+  }
+  .hero-img img {
+    width: 100%;
+    height: 100%;
+  }
+  .sidebar {
+    width: 70%;
+  }
+  .wrapper {
+    max-width: 600px;
+    margin: auto;
+  }
+  .hero-container {
+    display: block;
+  }
+  .popup-container {
+    width: 500px;
+    height: 200px;
+  }
+  .logo-wrapper::after {
+    content: "";
+    position: absolute;
+    top: -60px;
+    right: -20px;
+    border-right: 4px solid hsl(240, 100%, 5%);
+    height: 200px;
+  }
+  .popup .logo-wrapper img {
+    position: relative;
+    width: 100px;
+  }
+  .popup .btn {
+    padding: 5px 0.5rem;
+    background-color: hsl(5, 85%, 63%);
+    border: none;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    cursor: pointer;
+  }
+  .popup .popup-content input {
+    padding: 5px 5px;
+    font-size: 15px;
+    text-transform: capitalize;
+    border: 1px solid hsl(5, 85%, 63%);
+    margin-bottom: 10px;
+  }
+  .popup .popup-content {
+    position: relative;
+    text-transform: capitalize;
+    margin-left: 2.5rem;
+  }
+  .popup .popup-content h2 {
+    font-size: 0.9rem;
+  }
+  .popup .popup-content p {
+    font-size: 0.7rem;
+    padding: 10px 0;
+  }
+  .popup .close {
+    position: absolute;
+    top: 0.3rem;
+    right: 1.1rem;
+    width: 20px;
+    cursor: pointer;
+  }
+  .side-container {
+    padding: 30px;
+  }
+  .hero-content {
+    display: block;
+  }
+  .flex-wrapper {
+    display: block;
+  }
+  .hero-title h1 {
+    font-size: 2rem;
+  }
+  .hero-mess {
+    padding-left: 0;
+  }
+  .side {
+    width: 100%;
+    padding: 0;
+  }
+  .main-y {
+    padding: 5px 0px;
+  }
+  .hero-img {
+    width: 100%;
+  }
+  .hero-img img {
+    height: 20vh;
+  }
+  .news {
+    padding-top: 1.5rem;
+  }
+  .side-content h1 {
+    font-size: 1rem;
+  }
+  .side-title h1 {
+    font-size: 1.5rem;
+  }
+
+  .hero-mess .btn {
+    padding: 0.7rem 1.5rem;
+    text-transform: uppercase;
+    font-size: 15px;
+  }
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #desktop-nav {
+    display: none;
+  }
+
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #Wax {
+    margin: 0;
+  }
+
+  .hero-container {
+    display: block;
+  }
+  .popup-container {
+    width: 600px;
+    height: 400px;
+  }
+  .side {
+    width: 100%;
+    padding: 0;
+  }
+  .side-container {
+    background-color: hsl(240, 100%, 5%);
+    padding: 50px 30px;
+  }
+
+  .wrap {
+    max-width: 900px;
+    margin: auto;
+  }
+
+  .logo img {
+    width: 70px;
+  }
+  .wrapper {
+    max-width: 900px;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .sidebar {
+    width: 70%;
+    z-index: 100000000;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  #desktop-nav {
+    display: flex;
+  }
+  #main-nav {
+    display: none;
+  }
+  #Wax {
+    margin: 0;
+  }
+
+  .hero-container {
+    display: flex;
+  }
+  .popup-container {
+    width: 800px;
+    height: 600px;
+  }
+  .hero-section {
+    padding-right: 15px;
+  }
+
+  .wrap {
+    max-width: 900px;
+    margin: auto;
+  }
+
+  .header.sticky {
+    background: hsl(5, 85%, 63%);
+  }
+
+  .logo img {
+    width: 70px;
+  }
+  .wrapper {
+    max-width: 1100px;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .sidebar {
+    width: 70%;
+    z-index: 100000000;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #desktop-nav {
+    display: flex;
+  }
+  #main-nav {
+    display: none;
+  }
+  #Wax {
+    margin: 0;
+  }
+  .popup-container {
+    width: 700px;
+    height: 500px;
+  }
+
+  .wrap {
+    max-width: 1100px;
+    margin: auto;
+  }
+
+  .logo img {
+    width: 70px;
+  }
+  .wrapper {
+    max-width: 1400px;
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .sidebar {
+    width: 70%;
+    z-index: 100000000;
+  }
+}
