--- a/news/style.css
+++ b/news/style.css
@@ -113,7 +113,7 @@ header {
   width: fit-content;
 }
 .hero-title h1 {
-  font-size: 2.5rem;
+  font-size: fit-content;
 }
 .hero-mess {
   padding-left: 2.5rem;
@@ -143,6 +143,7 @@ header {
 .hero-text p {
   line-height: 25px;
   padding-bottom: 1rem;
+  font-size: 1rem;
 }
 
 .side {
@@ -173,6 +174,10 @@ header {
   padding-bottom: 10px;
   transition: 0.4s ease;
   cursor: pointer;
+}
+.side-content p {
+  font-size: 1rem;
+  opacity: 0.7;
 }
 .side-content h1:hover {
   color: hsl(35, 77%, 62%);
@@ -244,12 +249,39 @@ header {
   align-items: center;
   padding: 1rem 1.5rem;
 }
-
+.hero-hero {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.hero-text-container {
+  text-align: center;
+  padding-bottom: 1rem;
+}
+.hero-wrap {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: auto;
+}
+.hero-wrap a {
+  margin: 5px 10px;
+}
+.hero-wrap {
+  width: 100%;
+}
+.hero-wrap img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
 .popup {
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 1;
+  z-index: 10000;
   transform: translate(-50%, -50%);
   display: none;
   transition: all 0.2s ease;
@@ -329,7 +361,6 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(3px);
   transition: 0.15s ease;
 }
 
