--- a/news/style.css
+++ b/news/style.css
@@ -361,7 +361,9 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
+  backdrop-filter: blur(10px);
   transition: 0.15s ease;
+  z-index: 1;
 }
 
 footer {
