--- a/news/style.css
+++ b/news/style.css
@@ -8,6 +8,25 @@
 ::selection {
   background-color: hsl(5, 85%, 63%);
 }
+.loader {
+  background: white url(assets/images/1474.gif) no-repeat center center;
+  height: 100vh;
+  width: 100%;
+  z-index: 1000000000;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dis {
+  animation: vanish 1s forwards ease-in-out;
+}
+@keyframes vanish {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 body,
 html {
   font-family: "Inter", sans-serif;
@@ -36,166 +55,6 @@ h2 {
   font-size: 1.2rem;
   font-weight: 700;
 }
-
-header {
-  width: 100%;
-  height: 10vh;
-}
-
-.loader {
-  background: white url(assets/images/Ellipsis-5.6s-200px.gif) no-repeat center
-    center;
-  height: 100vh;
-  width: 100%;
-  z-index: 100;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.dis {
-  animation: vanish 1s forwards ease-in-out;
-}
-@keyframes vanish {
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-.wrapper {
-  max-width: 1400px;
-  margin: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.wrapper-top {
-  padding-top: 1rem;
-}
-
-#desktop-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#main-nav {
-  display: none;
-}
-.nav-links .nav-items li {
-  display: inline-flex;
-  margin: 0px 10px;
-}
-.nav-links .nav-items .nav-item {
-  transition: color 0.3s ease;
-}
-.nav-links .nav-items .nav-item:hover {
-  color: hsl(35, 77%, 62%);
-}
-.sidebar .menu li a {
-  transition: 500ms ease;
-}
-.sidebar .menu li a:hover {
-  color: hsl(35, 77%, 62%);
-}
-.main-y {
-  width: 100%;
-  padding-top: 5.25rem;
-}
-
-.hero-container {
-  display: flex;
-}
-.hero-content {
-  display: flex;
-  padding: 1.5rem 0px;
-  text-transform: capitalize;
-}
-.hero-title {
-  width: fit-content;
-}
-.hero-title h1 {
-  font-size: fit-content;
-}
-.hero-mess {
-  padding-left: 2.5rem;
-}
-.hero-mess {
-  display: flex;
-  flex-direction: column;
-}
-
-.hero-mess .btn {
-  padding: 1rem;
-  background-color: hsl(5, 85%, 63%);
-  border: none;
-  color: white;
-  font-weight: 700;
-  letter-spacing: 3px;
-  transition: all 0.3s ease;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.hero-mess .btn:hover {
-  color: white;
-  background-color: black;
-}
-
-.hero-text p {
-  line-height: 25px;
-  padding-bottom: 1rem;
-  font-size: 1rem;
-}
-
-.side {
-  width: 90%;
-  height: 100%;
-  padding-left: 20px;
-  text-transform: capitalize;
-}
-.side-container {
-  background-color: hsl(240, 100%, 5%);
-  padding: 50px 30px;
-}
-.side-title h1 {
-  padding-bottom: 1rem;
-  color: hsl(35, 77%, 62%);
-}
-.side-content {
-  color: white;
-  padding-bottom: 2.5rem;
-  border-bottom: 1px gray solid;
-  padding-top: 1rem;
-}
-.side-content:last-child {
-  border-bottom: none;
-}
-.side-content h1 {
-  font-size: 1.3rem;
-  padding-bottom: 10px;
-  transition: 0.4s ease;
-  cursor: pointer;
-}
-.side-content p {
-  font-size: 1rem;
-  opacity: 0.7;
-}
-.side-content h1:hover {
-  color: hsl(35, 77%, 62%);
-}
-
-.flex-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.items .basic-img img {
-  width: 100px;
-  transition: all 0.4s ease;
-  box-shadow: none;
-}
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -206,16 +65,11 @@ header {
   transition: all 0.3s ease-in-out;
   transform: translate(100%);
 }
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100000;
-  transition: 0.6s ease;
+.sidebar .menu li a {
+  transition: 500ms ease;
 }
-.header.sticky {
-  background: hsl(5, 85%, 63%);
+.sidebar .menu li a:hover {
+  color: hsl(35, 77%, 62%);
 }
 
 .show-sidebar {
@@ -249,621 +103,336 @@ header {
   align-items: center;
   padding: 1rem 1.5rem;
 }
+/* end sidebar */
+
+#desktop-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#main-nav {
+  display: none;
+}
+header {
+  width: 100%;
+  height: 10vh;
+}
+.nav-links .nav-items li {
+  display: inline-flex;
+  margin: 0px 10px;
+}
+.nav-links .nav-items .nav-item {
+  font-size: 1.2rem;
+  transition: color 0.3s ease;
+}
+.nav-links .nav-items .nav-item:hover {
+  color: hsl(35, 77%, 62%);
+}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100000;
+  transition: 0.6s ease;
+}
+.header.sticky {
+  background: hsl(5, 85%, 63%);
+}
+
+.wrapper {
+  max-width: 1400px;
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.flex-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.wrapper-top {
+  padding-top: 1rem;
+}
+
+/* end head */
+
+@media (max-width: 320px) {
+  #desktop-nav {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+  .header.sticky {
+    display: none;
+  }
+}
+@media (min-width: 320px) {
+  #desktop-nav {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+}
+@media (min-width: 481px) {
+  #desktop-nav {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+  .header.sticky {
+    display: none;
+  }
+}
+@media (min-width: 641px) {
+  #desktop-nav {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+}
+@media (min-width: 961px) {
+  #desktop-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: none;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+  .header.sticky {
+    display: block;
+    background: hsl(5, 85%, 63%);
+  }
+}
+@media (min-width: 1025px) {
+  #desktop-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: none;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+}
+@media (min-width: 1281px) {
+  #desktop-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #main-nav {
+    display: none;
+    justify-content: space-between;
+  }
+  .hero-container {
+    flex-direction: row;
+  }
+  .hero-content {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-content p {
+    text-align: justify;
+  }
+  .hero-section {
+    margin-right: 15px;
+  }
+}
+
+.main-y {
+  width: 100%;
+  padding-top: 5.25rem;
+}
+.hero-container {
+  display: flex;
+}
 .hero-hero {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
-.hero-text-container {
-  text-align: center;
-  padding-bottom: 1rem;
-}
-.hero-wrap {
+.hero-content {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1000px;
-  margin: auto;
+  padding: 1.5rem 0px;
+  text-transform: capitalize;
 }
-.hero-wrap a {
-  margin: 5px 10px;
-}
-.hero-wrap {
+.hero-title {
   width: 100%;
 }
+.hero-title h1 {
+  font-size: fit-content;
+}
+
+.hero-mess {
+  display: flex;
+  flex-direction: column;
+}
+.hero-text p {
+  line-height: 25px;
+  padding-bottom: 1rem;
+  font-size: 1rem;
+}
+
+.hero-mess .btn {
+  padding: 1rem;
+  background-color: hsl(5, 85%, 63%);
+  border: none;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 3px;
+  transition: all 0.3s ease;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.hero-mess .btn:hover {
+  color: white;
+  background-color: black;
+}
+
 .hero-wrap img {
   width: 150px;
   height: 150px;
   object-fit: cover;
 }
-.popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 10000;
-  transform: translate(-50%, -50%);
-  display: none;
-  transition: all 0.2s ease;
-}
-.popup-container {
-  position: relative;
-  width: 700px;
-  height: 500px;
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.popup .logo-wrapper {
-  position: relative;
-  padding: 10px;
-}
-.logo-wrapper::after {
-  content: "";
-  position: absolute;
-  top: -60px;
-  right: -20px;
-  border-right: 4px solid hsl(240, 100%, 5%);
-  height: 300px;
-}
-.popup .logo-wrapper img {
-  position: relative;
-  width: 200px;
+/* aside */
+
+.side {
+  width: 100%;
+  text-transform: capitalize;
+  background-color: hsl(240, 100%, 5%);
 }
 
-.popup .popup-content {
-  position: relative;
-  text-transform: capitalize;
-  margin-left: 2.5rem;
-}
-.popup .popup-content h2 {
-  font-size: 1.5rem;
-}
-.popup .popup-content p {
-  font-size: 0.9rem;
-  padding: 10px 0;
-}
-.popup label {
-  display: flex;
-  flex-direction: column;
-}
-.popup .btn {
-  padding: 10px 2rem;
-  background-color: hsl(5, 85%, 63%);
-  border: none;
-  color: white;
-  font-size: 1rem;
-  font-weight: 600;
-  text-transform: capitalize;
-  cursor: pointer;
-}
-.popup .popup-content input {
-  padding: 10px 2rem;
-  text-transform: capitalize;
-  border: 1px solid hsl(5, 85%, 63%);
-  margin-bottom: 10px;
-}
-.popup .close {
-  position: absolute;
-  top: 0.6rem;
-  right: 1.5rem;
-  cursor: pointer;
-}
-.hidden {
-  display: none;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
+.side-container {
+  padding: 70px 30px;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(10px);
-  transition: 0.15s ease;
-  z-index: 1;
+}
+.side-title h1 {
+  padding-bottom: 1rem;
+  color: hsl(35, 77%, 62%);
+}
+.side-content {
+  color: white;
+  padding-bottom: 2.5rem;
+  border-bottom: 1px gray solid;
+  padding-top: 1rem;
+}
+.side-content:last-child {
+  border-bottom: none;
+}
+.side-content h1 {
+  font-size: 1.3rem;
+  padding-bottom: 10px;
+  transition: 0.4s ease;
+  cursor: pointer;
+}
+.side-content p {
+  font-size: 1rem;
+  opacity: 0.7;
+}
+.side-content h1:hover {
+  color: hsl(35, 77%, 62%);
 }
 
-footer {
-  width: 100%;
+.items .basic-img img {
+  width: 100px;
+  transition: all 0.4s ease;
+  box-shadow: none;
 }
-footer .foot {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10vh;
-}
+
 .logo-rant {
   margin-right: 20px;
   padding: 20px;
 }
 .logo-rant img {
   width: 70px;
-}
-
-@media screen and (max-width: 768px) {
-  #desktop-nav {
-    display: none;
-  }
-  .logo img {
-    width: 50px;
-  }
-  .wrapper {
-    max-width: 800px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .hero-container {
-    display: block;
-  }
-  .popup-container {
-    width: 600px;
-    height: 400px;
-  }
-
-  .side-container {
-    background-color: hsl(240, 100%, 5%);
-    padding: 50px 30px;
-  }
-  .hero-content {
-    display: block;
-  }
-  .flex-wrapper {
-    display: block;
-  }
-  .hero-title h1 {
-    font-size: 2rem;
-  }
-  .hero-mess {
-    padding-left: 0;
-  }
-  .side {
-    width: 100%;
-    padding: 0;
-  }
-  .main-y {
-    padding: 5px 0px;
-  }
-  .hero-img {
-    width: 100%;
-  }
-
-  .news {
-    padding-top: 1.5rem;
-  }
-  .side-content h1 {
-    font-size: 1rem;
-  }
-  .side-title h1 {
-    font-size: 1.5rem;
-  }
-  .content-fanet h1 {
-    font-size: 2rem;
-  }
-  .content-fanet p {
-    font-size: 0.8rem;
-    color: gray;
-  }
-  .content-fanet h2 {
-    font-size: 1rem;
-  }
-  .hero-mess .btn {
-    padding: 0.7rem 1.5rem;
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-  .sidebar {
-    width: 70%;
-    z-index: 1000000;
-  }
-  .header {
-    position: relative;
-    transition: 0.6s ease;
-  }
-  .header.sticky {
-    background: transparent;
-  }
-
-  #main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-
-@media only screen and (max-width: 456px) {
-  #desktop-nav {
-    display: none;
-  }
-  .header {
-    position: relative;
-    transition: 0.6s ease;
-  }
-  .header.sticky {
-    background: transparent;
-  }
-
-  .logo img {
-    width: 50px;
-  }
-  .sidebar {
-    width: 70%;
-  }
-  .wrapper {
-    max-width: 500px;
-    margin: auto;
-  }
-  .popup .wrapper {
-    z-index: -1;
-  }
-  .hero-container {
-    display: block;
-  }
-  .popup-container {
-    width: 400px;
-    height: 200px;
-    margin: auto;
-  }
-  .logo-wrapper::after {
-    content: "";
-    position: absolute;
-    top: -60px;
-    right: -20px;
-    border-right: 4px solid hsl(240, 100%, 5%);
-    height: 200px;
-  }
-  .popup .logo-wrapper img {
-    position: relative;
-    width: 100px;
-  }
-  .popup .btn {
-    padding: 5px 0.5rem;
-    background-color: hsl(5, 85%, 63%);
-    border: none;
-    color: white;
-    font-size: 0.8rem;
-    font-weight: 600;
-    text-transform: capitalize;
-    cursor: pointer;
-  }
-  .popup .popup-content input {
-    padding: 5px 5px;
-    font-size: 15px;
-    text-transform: capitalize;
-    border: 1px solid hsl(5, 85%, 63%);
-    margin-bottom: 10px;
-  }
-  .popup .popup-content {
-    position: relative;
-    text-transform: capitalize;
-    margin-left: 2.5rem;
-  }
-  .popup .popup-content h2 {
-    font-size: 0.9rem;
-  }
-  .popup .popup-content p {
-    font-size: 0.7rem;
-    padding: 10px 0;
-  }
-  .popup .close {
-    position: absolute;
-    top: 0.3rem;
-    right: 1.1rem;
-    width: 20px;
-    cursor: pointer;
-  }
-  .side-container {
-    padding: 30px;
-  }
-  .hero-content {
-    display: block;
-  }
-  .flex-wrapper {
-    display: block;
-  }
-  .hero-title h1 {
-    font-size: 2rem;
-  }
-  .hero-mess {
-    padding-left: 0;
-  }
-  .side {
-    width: 100%;
-    padding: 0;
-  }
-  .main-y {
-    padding: 5px 0px;
-  }
-  .hero-img {
-    width: 100%;
-  }
-  .hero-img img {
-    height: 20vh;
-  }
-  .news {
-    padding-top: 1.5rem;
-  }
-  .side-content h1 {
-    font-size: 1rem;
-  }
-  .side-title h1 {
-    font-size: 1.5rem;
-  }
-
-  .hero-mess .btn {
-    padding: 0.7rem 1.5rem;
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-  #main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-@media only screen and (max-width: 600px) {
-  #desktop-nav {
-    display: none;
-  }
-  .header {
-    position: relative;
-    transition: 0.6s ease;
-  }
-  .header.sticky {
-    background: transparent;
-  }
-
-  .logo img {
-    width: 50px;
-  }
-  .hero-img img {
-    width: 100%;
-    height: 100%;
-  }
-  .sidebar {
-    width: 70%;
-  }
-  .wrapper {
-    max-width: 600px;
-    margin: auto;
-  }
-  .hero-container {
-    display: block;
-  }
-  .popup-container {
-    width: 500px;
-    height: 200px;
-  }
-  .logo-wrapper::after {
-    content: "";
-    position: absolute;
-    top: -60px;
-    right: -20px;
-    border-right: 4px solid hsl(240, 100%, 5%);
-    height: 200px;
-  }
-  .popup .logo-wrapper img {
-    position: relative;
-    width: 100px;
-  }
-  .popup .btn {
-    padding: 5px 0.5rem;
-    background-color: hsl(5, 85%, 63%);
-    border: none;
-    color: white;
-    font-size: 0.8rem;
-    font-weight: 600;
-    text-transform: capitalize;
-    cursor: pointer;
-  }
-  .popup .popup-content input {
-    padding: 5px 5px;
-    font-size: 15px;
-    text-transform: capitalize;
-    border: 1px solid hsl(5, 85%, 63%);
-    margin-bottom: 10px;
-  }
-  .popup .popup-content {
-    position: relative;
-    text-transform: capitalize;
-    margin-left: 2.5rem;
-  }
-  .popup .popup-content h2 {
-    font-size: 0.9rem;
-  }
-  .popup .popup-content p {
-    font-size: 0.7rem;
-    padding: 10px 0;
-  }
-  .popup .close {
-    position: absolute;
-    top: 0.3rem;
-    right: 1.1rem;
-    width: 20px;
-    cursor: pointer;
-  }
-  .side-container {
-    padding: 30px;
-  }
-  .hero-content {
-    display: block;
-  }
-  .flex-wrapper {
-    display: block;
-  }
-  .hero-title h1 {
-    font-size: 2rem;
-  }
-  .hero-mess {
-    padding-left: 0;
-  }
-  .side {
-    width: 100%;
-    padding: 0;
-  }
-  .main-y {
-    padding: 5px 0px;
-  }
-  .hero-img {
-    width: 100%;
-  }
-  .hero-img img {
-    height: 20vh;
-  }
-  .news {
-    padding-top: 1.5rem;
-  }
-  .side-content h1 {
-    font-size: 1rem;
-  }
-  .side-title h1 {
-    font-size: 1.5rem;
-  }
-
-  .hero-mess .btn {
-    padding: 0.7rem 1.5rem;
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-  #main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  #desktop-nav {
-    display: none;
-  }
-
-  #main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  #Wax {
-    margin: 0;
-  }
-
-  .hero-container {
-    display: block;
-  }
-  .popup-container {
-    width: 600px;
-    height: 400px;
-  }
-  .side {
-    width: 100%;
-    padding: 0;
-  }
-  .side-container {
-    background-color: hsl(240, 100%, 5%);
-    padding: 50px 30px;
-  }
-
-  .wrap {
-    max-width: 900px;
-    margin: auto;
-  }
-
-  .logo img {
-    width: 70px;
-  }
-  .wrapper {
-    max-width: 900px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .sidebar {
-    width: 70%;
-    z-index: 100000000;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  #desktop-nav {
-    display: flex;
-  }
-  #main-nav {
-    display: none;
-  }
-  #Wax {
-    margin: 0;
-  }
-
-  .hero-container {
-    display: flex;
-  }
-  .popup-container {
-    width: 800px;
-    height: 600px;
-  }
-  .hero-section {
-    padding-right: 15px;
-  }
-
-  .wrap {
-    max-width: 900px;
-    margin: auto;
-  }
-
-  .header.sticky {
-    background: hsl(5, 85%, 63%);
-  }
-
-  .logo img {
-    width: 70px;
-  }
-  .wrapper {
-    max-width: 1100px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .sidebar {
-    width: 70%;
-    z-index: 100000000;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  #desktop-nav {
-    display: flex;
-  }
-  #main-nav {
-    display: none;
-  }
-  #Wax {
-    margin: 0;
-  }
-  .popup-container {
-    width: 700px;
-    height: 500px;
-  }
-
-  .wrap {
-    max-width: 1100px;
-    margin: auto;
-  }
-
-  .logo img {
-    width: 70px;
-  }
-  .wrapper {
-    max-width: 1400px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .sidebar {
-    width: 70%;
-    z-index: 100000000;
-  }
 }
