--- a/news/read.css
+++ b/news/read.css
@@ -67,8 +67,7 @@ header {
 }
 
 .loader {
-  background: white url(assets/images/Ellipsis-5.6s-200px.gif) no-repeat center
-    center;
+  background: white url(assets/images/1474.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   z-index: 100;
